# titanic_machine_learning_from_disaster

./: main.py  pyproject.toml  titanic_kaggle.ipynb
