[tool.poetry]
name = "titanic_machine_learning_from_disaster"
version = "0.1.0"
description = ""
authors = ["LucasFDutra"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
